<resources>
    <!-- Set app name -->
    <string name="app_name">Learner Log</string>

    <!-- Set text for hints in text boxes -->
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="edit_email">Email Address</string>
    <string name="edit_phone">Contact Number</string>
    <string name="edit_name">Full Name</string>
    <string name ="edit_address">Address</string>

    <string name="register">Create an Account</string>
    <string name="register_button">Register</string>

    <!-- set the title for home screen to app name -->
    <string name="title_activity_student_navigation">Learner Log</string>
    <string name="title_activity_instructor_navigation">Learner Log</string>

    <!--open and close nav drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_lesson_list">Lessons</string>
    <string name="title_lesson_detail">Lesson Detail</string>
    <string name="action_search">Search</string>

    <!-- array to hold lesson num spinner values -->
    <array name="lessonNums">
        <item>Regular Lesson</item>
        <item>Pre-test</item>
    </array>

    <array name="status">
        <item>confirmed</item>
        <item>cancelled</item>
        <item>completed</item>
    </array>

    <array name="times">
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>13:00 PM</item>
        <item>14:00 PM</item>
        <item>15:00 PM</item>
        <item>16:00 PM</item>
        <item>17:00 PM</item>
        <item>18:00 PM</item>
        <item>19:00 PM</item>
        <item>20:00 PM</item>
    </array>

    <array name="search">
        <item>requested</item>
        <item>confirmed</item>
        <item>cancelled</item>
        <item>declined</item>
    </array>

    <string name="reject_request">Reject</string>
    <string name="Accept_request">Accept</string>

    <string name="Option_1">12 Lessons - €325</string>
    <string name="Option_2">Single Lesson/Pre-test - €35</string>
    <string name="payment_method">Payment Details:</string>
    <string name="options">Select an Option:</string>
    <string name="payment">Payments can be made through Paypal. Once payment has been recieved,
        students can begin to book lessons. Cancellations must be made 48 hours in advance to avoid losing out on payment.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_book">Book</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="title_payments">Payments</string>
    <string name="title_home">Home</string>
    <string name="title_logout">Logout</string>
    <string name="title_requests">Requests</string>
    <string name="title_students">Students</string>

</resources>
