<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ie.ucc.bis.a114355681.learnerlog.StudentActivities.LessonPaymentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/top_border"
            android:elevation="4dp"
            app:menu="@menu/top_navigation_menu"
            app:titleTextAppearance="@style/MyTheme.ActionBar.TitleTextStyle">

        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <TextView
            android:id="@+id/txtSelectOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSelectOption">

            <RadioButton
                android:id="@+id/rdoOption1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSelectOption"
                android:text="@string/Option_1"
                android:buttonTint="@color/colorAccent"/>

            <RadioButton
                android:id="@+id/rdoOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rdoOption1"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/Option_2" />
            </RadioGroup>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:padding="5dp"
            android:layout_below="@+id/textView5"/>


    </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:gravity="center|bottom"
        android:orientation="vertical">

    <Button
        android:id="@+id/btnContinue"
        style="@style/button_style"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="Continue to Paypal"
        android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bottomBar"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomNavView_Bar"
            android:background="@drawable/bottom_border"
            app:menu="@menu/bottom_navigation_menu">

        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>

</LinearLayout>
